# auto-miliastra

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
artifacts/: README.md  active_project
artifacts/catalog/: README.md  node_data.json
examples/: parse_gil.py
scripts/: fetch_node_catalog.py  probe_entity_graphs.py  probe_gil.py  probe_nodes.py  summarize_graphs.py
src/miliastra_agent/: __init__.py  __main__.py  paths.py
src/miliastra_agent/agents/: __init__.py
src/miliastra_agent/agents/prompts/: .gitkeep
src/miliastra_agent/catalog/: __init__.py  node_catalog.py
src/miliastra_agent/cli/: main.py
src/miliastra_agent/core/: __init__.py  gi_file.py  graph_models.py  models.py  wire.py
src/miliastra_agent/core/proto/: .gitkeep  asset.proto  camera.proto  entity.proto  gia.proto  gia_graph.proto  gil.proto
src/miliastra_agent/core/proto_gen/: __init__.py  asset_pb2.py  camera_pb2.py  entity_pb2.py  gia_graph_pb2.py  gia_pb2.py
src/miliastra_agent/generators/: __init__.py  entities.py  gia_encode.py
src/miliastra_agent/integrations/: __init__.py
src/miliastra_agent/parsers/: __init__.py  entities.py  entity_graph_bindings.py  gil.py  node_graphs.py
tests/: test_cli.py  test_entity_graph_bindings.py  test_gia_encode.py  test_gil_parser.py  test_node_catalog.py  test_node_graphs.py  test_parse_input.py
