[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "miliastra-agent"
version = "0.1.0"
description = "Automation toolkit for Genshin Impact Miliastra Wonderland UGC"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
authors = [{ name = "marco" }]
keywords = ["genshin", "miliastra", "ugc", "wonderland"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "typer>=0.12",
  "rich>=13.0",
  "pydantic>=2.0",
  "protobuf>=5.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.6",
  "mypy>=1.11",
]
agent = [
  "httpx>=0.27",
  "mcp>=1.0",
]

[project.scripts]
miliastra = "miliastra_agent.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/miliastra_agent"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.mypy]
python_version = "3.11"
strict = true
packages = ["miliastra_agent"]
